--- a/desk.html
+++ b/desk.html
@@ -13,8 +13,9 @@
   <link rel="stylesheet" type="text/css" href="second.css">
     </head>
     <body background="download (1).jpg" style="background-size: cover;">
-        <h3 class="btn btn-info heading">Object Detection</h3>
+        <h3 class="btn btn-info heading" id="desk_detect">Object Detection</h3>
         <br>
         <a class="button" href="index.html">Back</h3>
+        <script src="desk.js"></script>
     </body>
 </html>
