--- a/tv and ac.html
+++ b/tv and ac.html
@@ -13,9 +13,9 @@
   <link rel="stylesheet" type="text/css" href="second.css">
     </head>
     <body background="download (1).jpg" style="background-size: cover;">
-        <h3 class="btn btn-info heading" id="bottles_detect">Object Detection</h3>
+        <h3 class="btn btn-info heading" id="tv_and_ac_detect">Object Detection</h3>
         <br>
         <a class="button" href="index.html">Back</h3>
-        <script src="bottles.js"></script>
+        <script src="tv and ac.js"></script>
     </body>
 </html>
