--- a/bedroom.html
+++ b/bedroom.html
@@ -13,8 +13,9 @@
   <link rel="stylesheet" type="text/css" href="second.css">
     </head>
     <body background="download (1).jpg" style="background-size: cover;">
-        <h3 class="btn btn-info heading" id="bedroom_detect">Object Detection</h3>
-        <br>
+        <h3 class="btn btn-info heading">Object Detection</h3>
+        <h3 class="btn btn-danger" id="bedroom_status"></h3>
+        <h3 class="btn btn-warning" id="bedroom_objects"></h3>
         <a class="button" href="index.html">Back</a>
         <script src="bedroom.js"></script>
     </body>
