--- a/desk.html
+++ b/desk.html
@@ -13,8 +13,9 @@
   <link rel="stylesheet" type="text/css" href="second.css">
     </head>
     <body background="download (1).jpg" style="background-size: cover;">
-        <h3 class="btn btn-info heading" id="desk_detect">Object Detection</h3>
-        <br>
+        <h3 class="btn btn-info heading">Object Detection</h3>
+        <h3 class="btn btn-danger" id="desk_status"></h3>
+        <h3 class="btn btn-warning" id="desk_objects"></h3>
         <a class="button" href="index.html">Back</h3>
         <script src="desk.js"></script>
     </body>
