--- a/tv and ac.html
+++ b/tv and ac.html
@@ -13,8 +13,9 @@
   <link rel="stylesheet" type="text/css" href="second.css">
     </head>
     <body background="download (1).jpg" style="background-size: cover;">
-        <h3 class="btn btn-info heading" id="tv_and_ac_detect">Object Detection</h3>
-        <br>
+        <h3 class="btn btn-info heading">Object Detection</h3>
+        <h3 class="btn btn-danger" id="tv_and_ac_status"></h3>
+        <h3 class="btn btn-warning" id="tv_and_ac_objects"></h3>
         <a class="button" href="index.html">Back</h3>
         <script src="tv and ac.js"></script>
     </body>
